--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Source+Sans+Pro:wght@400;600;700;900&display=swap" rel="stylesheet">
     <title>Blog Application</title>
     <style>
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: 'Lato', sans-serif;
+        font-family: 'Source Sans Pro', sans-serif;
       }
     </style>
   </head>
